--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,11 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    
+    - name: Register Azure resource providers (one-time)
+      run: |
+        az provider register --namespace Microsoft.Storage
+        az provider show --namespace Microsoft.Storage --query "registrationState" -o tsv
 
     - name: Deploy Bicep (Azure CLI)
       run: |
